--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,21 +73,19 @@
             app:fontFamily="sans-serif-black"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.448"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.921" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button"
-            android:layout_width="164dp"
-            android:layout_height="103dp"
+            android:id="@+id/morseButton"
+            android:layout_width="248dp"
+            android:layout_height="107dp"
             android:layout_marginTop="4dp"
-            android:background="#FFFF8F"
+            android:background="@drawable/unitround"
             android:drawableStart="@drawable/praise_foreground"
-            android:text="Other"
+            android:text="Morse Code"
             android:textSize="24sp"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
