--- a/app/src/main/res/layout/currency_page.xml
+++ b/app/src/main/res/layout/currency_page.xml
@@ -117,7 +117,7 @@
             app:layout_constraintTop_toBottomOf="@+id/enterCurrency" />
 
         <EditText
-            android:id="@+id/etSecondCurrency"
+            android:id="@+id/convertedAmount"
             android:layout_width="360dp"
             android:layout_height="49dp"
             android:layout_marginBottom="16dp"
